# ThingsBoard-Downloader

./: .env.template  .gitignore  CITATION.cff  README.md  main.py  pyproject.toml  update_local_keys.py
.github/workflows/: main.yml
config/: config.template.json  devices.template.json
notebooks/: plot_data copy.ipynb  plot_data.ipynb  plot_vs_reference.ipynb
scripts/: run_mypy.sh
utils/: config_files.py  data_files.py  download_interval.py  file_operations.py  os_functions.py  paths.py  thingsboard_api.py
