[tool.poetry]
name = "thingsboard-downloader"
version = "0.1.0"
description = ""
authors = ["Patrick Aigner <patrick.aigner@tum.de>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
types-requests = "^2.32.0.20241016"
mypy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
